schnack/svc-schnack.yaml
apiVersion: v1
kind: Service
metadata:
  name: schnack-service
spec:
  selector:
    app: schnack
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
