schnack/ing-schnack.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: comments-example-com
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - comments.example.com
    secretName: comments-example-com-tls
  rules:
  - host: comments.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: schnack-service
          servicePort: 3000
